--- a/style.css
+++ b/style.css
@@ -76,7 +76,16 @@
   text-align: center;
   color: #E7E7EB;
 }
-
+.masthead{
+  margin-left: -30%;
+  margin-right: -8%;
+  background-size: 120%;
+  background-repeat: no-repeat;
+  min-height: 40vh;
+}
+.logoweat{
+  margin-left: 45%;
+}
   .bg-success {
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
@@ -84,6 +93,7 @@
   #place{
     display: flex;
     justify-content: space-between;
+    margin-left: 1rem;
   }
 .icon{
   filter: invert(100%) sepia(1%) saturate(4224%) hue-rotate(181deg) brightness(93%) contrast(97%);
@@ -174,4 +184,16 @@
   height: 15rem;
   background-color: #1e213a;
 
+}
+.txt{
+  font-family: 'Raleway';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+}
+.lond{
+  background-color: transparent;
+  border: none;
 }
